Add a test loader script for Zenmap, so tests don't fail with Python <2.7
git-svn-id: https://svn.nmap.org/nmap@33597 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -401,7 +401,7 @@ nsock_check:
 	@cd $(NSOCKDIR)/src && $(MAKE) check
 
 zenmap_check:
-	@cd $(ZENMAPDIR) && $(PYTHON) -m unittest discover build/lib.* '*.py'
+	@cd $(ZENMAPDIR)/test && $(PYTHON) run_tests.py
 
 check: @NCAT_CHECK@ @NSOCK_CHECK@ @ZENMAP_CHECK@ @NSE_CHECK@ @NDIFF_CHECK@
 
