Introduce scan_engine_connect.cc, scan_engine_connect.h, scan_engine_raw.cc, scan_engine_raw.h and add them to Windows and Unix build systems.
git-svn-id: https://svn.nmap.org/nmap@33633 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/mswin32/nmap.vcxproj
+++ b/mswin32/nmap.vcxproj
@@ -164,6 +164,8 @@
     <ClCompile Include="..\portreasons.cc" />
     <ClCompile Include="..\protocols.cc" />
     <ClCompile Include="..\scan_engine.cc" />
+    <ClCompile Include="..\scan_engine_connect.cc" />
+    <ClCompile Include="..\scan_engine_raw.cc" />
     <ClCompile Include="..\service_scan.cc" />
     <ClCompile Include="..\services.cc" />
     <ClCompile Include="..\Target.cc" />
@@ -217,6 +219,8 @@
     <ClInclude Include="..\portreasons.h" />
     <ClInclude Include="..\protocols.h" />
     <ClInclude Include="..\scan_engine.h" />
+    <ClInclude Include="..\scan_engine_connect.h" />
+    <ClInclude Include="..\scan_engine_raw.h" />
     <ClInclude Include="..\service_scan.h" />
     <ClInclude Include="..\services.h" />
     <ClInclude Include="..\targets.h" />
