Include missing nse_lpeg.cc file for mswin32.
git-svn-id: https://svn.nmap.org/nmap@33636 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/mswin32/nmap.vcxproj
+++ b/mswin32/nmap.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="..\nse_debug.cc" />
     <ClCompile Include="..\nse_fs.cc" />
     <ClCompile Include="..\nse_main.cc" />
+    <ClCompile Include="..\nse_lpeg.cc" />
     <ClCompile Include="..\nse_utility.cc" />
     <ClCompile Include="..\nse_nmaplib.cc" />
     <ClCompile Include="..\nse_nsock.cc" />
