Keep the file list in order and add a header file for nse_lpeg.h as well.
git-svn-id: https://svn.nmap.org/nmap@33637 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/mswin32/nmap.vcxproj
+++ b/mswin32/nmap.vcxproj
@@ -148,8 +148,8 @@
     <ClCompile Include="..\nse_bit.cc" />
     <ClCompile Include="..\nse_debug.cc" />
     <ClCompile Include="..\nse_fs.cc" />
-    <ClCompile Include="..\nse_main.cc" />
     <ClCompile Include="..\nse_lpeg.cc" />
+    <ClCompile Include="..\nse_main.cc" />
     <ClCompile Include="..\nse_utility.cc" />
     <ClCompile Include="..\nse_nmaplib.cc" />
     <ClCompile Include="..\nse_nsock.cc" />
@@ -204,6 +204,7 @@
     <ClInclude Include="..\nse_bit.h" />
     <ClInclude Include="..\nse_debug.h" />
     <ClInclude Include="..\nse_fs.h" />
+    <ClInclude Include="..\nse_lpeg.h" />
     <ClInclude Include="..\nse_main.h" />
     <ClInclude Include="..\nse_utility.h" />
     <ClInclude Include="..\nse_nmaplib.h" />
