--- a/configure.ac
+++ b/configure.ac
@@ -55,6 +55,9 @@ AC_PROG_CXX
 AC_PROG_RANLIB
 AC_PROG_INSTALL
 
+dnl For nse_fs.cc
+LARGE_FILES_IF_NOT_BROKEN
+
 if test -n "$GXX"; then
   # -fno-strict-aliasing disables strict-aliasing optimizations that assume
   # that pointers of different types never point to the same object.
