Remove large files support from nse_fs
This was a hassle to support on AIX (several broken implmentations) and
the move to a more portable solution (using autoconfig macros) was also
troublesome. Upon review, nse_fs.cc only uses directory and link
functions, so large files support shouldn't matter. Stripping it out.

git-svn-id: https://svn.nmap.org/nmap@33671 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/configure.ac
+++ b/configure.ac
@@ -56,7 +56,7 @@ AC_PROG_RANLIB
 AC_PROG_INSTALL
 
 dnl For nse_fs.cc
-LARGE_FILES_IF_NOT_BROKEN
+dnl LARGE_FILES_IF_NOT_BROKEN
 
 if test -n "$GXX"; then
   # -fno-strict-aliasing disables strict-aliasing optimizations that assume
