Add configure test for PCAP_NETMASK_UNKNOWN
git-svn-id: https://svn.nmap.org/nmap@33774 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/configure.ac
+++ b/configure.ac
@@ -458,6 +458,8 @@ AC_SUBST(PCAP_CLEAN)
 AC_SUBST(PCAP_DIST_CLEAN)
 AC_SUBST(LIBPCAP_LIBS)
 
+PCAP_DEFINE_NETMASK_UNKNOWN
+
 have_pcre=no
 requested_included_pcre=no
 LIBPCREDIR=libpcre
