Add config.h entries for PCAP_NETMASK_UNKNOWN
git-svn-id: https://svn.nmap.org/nmap@33778 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/nmap_config.h.in
+++ b/nmap_config.h.in
@@ -237,5 +237,6 @@ extern "C" int gethostname (char *, unsigned int);
 #undef MACOSX
 
 #undef HAVE_IPV6_IPPROTO_RAW
+#undef PCAP_NETMASK_UNKNOWN
 
 #endif /* CONFIG_H */
