Add an uninstall option to ndiff's setup.py
git-svn-id: https://svn.nmap.org/nmap@33805 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -83,6 +83,7 @@ INSTALLZENMAP=@INSTALLZENMAP@
 INSTALLNDIFF=@INSTALLNDIFF@
 INSTALLNPING=@INSTALLNPING@
 UNINSTALLZENMAP=@UNINSTALLZENMAP@
+UNINSTALLNDIFF=@UNINSTALLNDIFF@
 UNINSTALLNPING=@UNINSTALLNPING@
 
 ifneq (@LIBLUA_LIBS@,)
@@ -365,7 +366,7 @@ install-nping: $(NPINGDIR)/nping
 install: install-nmap $(INSTALLNSE) $(INSTALLZENMAP) @NCAT_INSTALL@ @NMAP_UPDATE_INSTALL@ $(INSTALLNDIFF) $(INSTALLNPING)
 	@echo "NMAP SUCCESSFULLY INSTALLED"
 
-uninstall: uninstall-nmap $(UNINSTALLZENMAP) @NCAT_UNINSTALL@ @NMAP_UPDATE_UNINSTALL@ $(UNINSTALLNPING)
+uninstall: uninstall-nmap $(UNINSTALLZENMAP) @NCAT_UNINSTALL@ @NMAP_UPDATE_UNINSTALL@ $(UNINSTALLNDIFF) $(UNINSTALLNPING)
 
 uninstall-nmap:
 	rm -f $(DESTDIR)$(bindir)/$(TARGET)
@@ -381,6 +382,9 @@ uninstall-zenmap:
 		rm -f $(DESTDIR)$(bindir)/nmapfe; \
 	fi
 	rm -f $(DESTDIR)$(bindir)/xnmap
+
+uninstall-ndiff:
+	cd $(NDIFFDIR) && $(PYTHON) setup.py uninstall
 
 uninstall-ncat:
 	@cd $(NCATDIR) && $(MAKE) uninstall
