--- a/configure.ac
+++ b/configure.ac
@@ -232,12 +232,14 @@ fi
 if test "$with_ndiff" = "no"; then
   BUILDNDIFF=""
   INSTALLNDIFF=""
+  UNINSTALLNDIFF=""
   NDIFF_CHECK=""
   NDIFF_CLEAN=""
   NDIFF_DIST_CLEAN=""
 else
   BUILDNDIFF=build-ndiff
   INSTALLNDIFF=install-ndiff
+  UNINSTALLNDIFF=uninstall-ndiff
   NDIFF_CHECK="ndiff_check"
   NDIFF_CLEAN=ndiff_clean
   NDIFF_DIST_CLEAN=ndiff_dist_clean
@@ -245,6 +247,7 @@ fi
 AC_SUBST(NDIFFDIR)
 AC_SUBST(BUILDNDIFF)
 AC_SUBST(INSTALLNDIFF)
+AC_SUBST(UNINSTALLNDIFF)
 AC_SUBST(NDIFF_CHECK)
 AC_SUBST(NDIFF_CLEAN)
 AC_SUBST(NDIFF_DIST_CLEAN)
