Make build of ncat depend on lua_build, should fix occasional build failure with make -j8
git-svn-id: https://svn.nmap.org/nmap@33823 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/ncat/Makefile.in
+++ b/ncat/Makefile.in
@@ -107,7 +107,7 @@ ifneq ($(HAVE_OPENSSL),)
 TEST_PROGS += test/test-wildcard
 endif
 
-all: @LUA_BUILD@ $(TARGET) $(TEST_PROGS)
+all: $(TARGET) $(TEST_PROGS)
 
 lua_build: $(LIBLUADIR)/Makefile
 	@echo Compiling liblua; cd $(LIBLUADIR) && $(MAKE) liblua.a CC="$(CC)" MYCFLAGS="$(CFLAGS) $(LUA_CFLAGS)"
