Let configure find the ascii art even when building in a different directory
git-svn-id: https://svn.nmap.org/nmap@33846 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/configure.ac
+++ b/configure.ac
@@ -963,7 +963,7 @@ AC_OUTPUT(Makefile libnetutil/Makefile)
 
 # Krad ASCII ART#!#@$!@#$
 # Randomly store the name of one of the ASCII Art files in FILENAME
-FILENAME=`ls docs/leet-nmap-ascii-art*.txt 2>/dev/null | awk '
+FILENAME=`ls $srcdir/docs/leet-nmap-ascii-art*.txt 2>/dev/null | awk '
     BEGIN {
         srand();
     }
