Travis: use faster container builds, and add make check
git-svn-id: https://svn.nmap.org/nmap@33890 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ compiler:
   - gcc
   - clang
 # Change this to your needs
-script: ./configure && make
+sudo: false
+script: ./configure && make && make check
