Force nmap.rc to be rebuilt when nmap.h changes
The make rule for nmap.rc depended only on nmap.rc.in, which doesn't
change regularly. Since the rule itself adds version info based on
nmap.h, it makes sense to list this as one of its dependencies.

Fixes #45

git-svn-id: https://svn.nmap.org/nmap@33907 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/mswin32/Makefile
+++ b/mswin32/Makefile
@@ -53,7 +53,7 @@ winbuild: nmap.rc nsis/Nmap.nsi LICENSE
 	$(MAKENSIS) nmap-$(NMAP_VERSION)/Nmap.nsi
 	mv nmap-$(NMAP_VERSION)/NmapInstaller.exe nmap-$(NMAP_VERSION)-setup.exe
 
-nmap.rc: nmap.rc.in
+nmap.rc: nmap.rc.in ../nmap.h
 	sed -e '1i// Automatically generated from $<.' \
 	     -e 's/@@FILEVERSION@@/"$(NMAP_VERSION)\\0"/' \
 	     -e 's/@@COMMAVERSION@@/$(COMMA_VERSION)/' \
