--- a/mswin32/nmap.rc
+++ b/mswin32/nmap.rc
@@ -13,7 +13,7 @@
 //
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION 6,0,2,0
+FILEVERSION 6,0,47,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -30,7 +30,7 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Insecure.Org\0"
             VALUE "FileDescription", "Nmap\0"
-            VALUE "FileVersion", "6.02\0"
+            VALUE "FileVersion", "6.47SVN\0"
             VALUE "InternalName", "Nmap\0"
             VALUE "LegalCopyright", "Copyright (c) Insecure.Com LLC (fyodor@insecure.org)\0"
             VALUE "LegalTrademarks", "NMAP\0"
