Add some rules to update config.guess and config.sub from the latest
git-svn-id: https://svn.nmap.org/nmap@34019 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -429,6 +429,20 @@ Makefile: Makefile.in config.status
 config.status: configure
 	./config.status --recheck
 
+config.guess:
+	wget -O $@ 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.guess;hb=HEAD'
+
+%/config.guess: config.guess
+	cp $^ $@
+
+config.sub:
+	wget -O $@ 'http://git.savannah.gnu.org/gitweb/?p=config.git;a=blob_plain;f=config.sub;hb=HEAD'
+
+%/config.sub: config.sub
+	cp $^ $@
+
+configfiles-update: config.guess config.sub nping/config.guess nping/config.sub ncat/config.guess ncat/config.sub
+
 # Run the lua-format program to fix formatting of NSE files.
 lua-format:
 	./docs/style/lua-format -i scripts/*.nse
