--- a/nmap-update/Makefile.in
+++ b/nmap-update/Makefile.in
@@ -11,6 +11,8 @@ CPPFLAGS = @CPPFLAGS@ $(DEFS) -I$(NBASEDIR)
 LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@ $(NBASELIB)
 DEFS = @DEFS@ -D_FORTIFY_SOURCE=2
+APR_LIBS = @APR_LIBS@
+SVN_LIBS = @SVN_LIBS@
 
 INSTALL = @INSTALL@
 STRIP = @STRIP@
@@ -28,7 +30,7 @@ NBASELIB = $(NBASEDIR)/libnbase.a
 all: nmap-update
 
 nmap-update: $(O_FILES)
-	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $^ $(LIBS)
+	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $^ $(APR_LIBS) $(SVN_LIBS) $(LIBS)
 
 %.o: %.c
 	$(CC) -c -o $@ $(CPPFLAGS) $(CFLAGS) $<
