Let nmap-update be built alone (make build-nmap-update)
git-svn-id: https://svn.nmap.org/nmap@34084 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/nmap-update/Makefile.in
+++ b/nmap-update/Makefile.in
@@ -29,7 +29,7 @@ NBASELIB = $(NBASEDIR)/libnbase.a
 
 all: nmap-update
 
-nmap-update: $(O_FILES)
+nmap-update: $(O_FILES) $(NBASELIB)
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $^ $(APR_LIBS) $(SVN_LIBS) $(LIBS)
 
 %.o: %.c
