--- a/ncat/Makefile.in
+++ b/ncat/Makefile.in
@@ -109,6 +109,8 @@ endif
 
 all: $(TARGET) $(TEST_PROGS)
 
+$(LIBLUADIR)/liblua.a: @LUA_BUILD@
+
 lua_build: $(LIBLUADIR)/Makefile
 	@echo Compiling liblua; cd $(LIBLUADIR) && $(MAKE) liblua.a CC="$(CC)" MYCFLAGS="$(CFLAGS) $(LUA_CFLAGS)"
 
@@ -147,7 +149,7 @@ test/test-cmdline-split: test/test-cmdline-split.o ncat_posix.o ncat_core.o sys_
 test/test-wildcard: test/test-wildcard.o ncat_core.o ncat_ssl.o sys_wrap.o util.o ncat_posix.o $(LUA_OBJS)
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $^ $(NSOCKLIB) $(NBASELIB) $(OPENSSL_LIBS) $(PCAP_LIBS) $(LUA_LIBS) $(LIBS)
 
-.PHONY: uninstall all clean distclean
+.PHONY: uninstall all clean distclean lua_build
 
 ../libnetutil/libnetutil.a: ../libnetutil/Makefile
 	@echo Compiling libnetutil;
