Mark some Make targets as .PHONY
git-svn-id: https://svn.nmap.org/nmap@34087 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -471,4 +471,4 @@ zoneTrans db2-info db2-brute html-title robots.txt xmpp sql-injection \
 http-robtex-reverse-ip http-vuln-zimbra-lfi http-vuln-0-day-lfi-zimbra \
 whois db2-discover )
 
-.PHONY: lua-format
+.PHONY: all clean install uninstall check static debug prerelease release-tarballs release-rpms web my_clean distclean lua-format
