Silence warnings: 'Makefile.in seems to ignore the --datarootdir setting'
git-svn-id: https://svn.nmap.org/nmap@34088 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -4,6 +4,7 @@ export NMAP_UPDATE_CHANNEL := $(shell grep '^\#[ \t]*define[ \t]\+NMAP_UPDATE_CH
 NMAP_NAME= Nmap
 NMAP_URL= http://nmap.org
 NMAP_PLATFORM=@host@
+datarootdir = @datarootdir@
 prefix = @prefix@
 exec_prefix = @exec_prefix@
 bindir = @bindir@
