Have travis notify IRC when build fails
git-svn-id: https://svn.nmap.org/nmap@34424 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ compiler:
 # Change this to your needs
 sudo: false
 script: ./configure && make && make check
+
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#nmap"
+    on_success: change
+    on_failure: always
