--- a/libpcap/config.h.in
+++ b/libpcap/config.h.in
@@ -271,6 +271,9 @@
 /* target host supports USB sniffing */
 #undef PCAP_SUPPORT_USB
 
+/* target host supports packet ring capture */
+#undef PCAP_SUPPORT_PACKET_RING
+
 /* include ACN support */
 #undef SITA
 
