New Nmap configure art
git-svn-id: https://svn.nmap.org/nmap@34524 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/configure.ac
+++ b/configure.ac
@@ -980,5 +980,6 @@ FILENAME=`ls $srcdir/docs/leet-nmap-ascii-art*.txt 2>/dev/null | $AWK '
 if test "$FILENAME"; then
   cat "$FILENAME"
 fi
+echo "  NMAP IS A POWERFUL TOOL -- USE CAREFULLY AND RESPONSIBLY"
 
 echo "Configuration complete.  Type make (or gmake on some *BSD machines) to compile."
