Don't package Ndiff uninstaller in RPM
git-svn-id: https://svn.nmap.org/nmap@34527 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/nmap.spec.in
+++ b/nmap.spec.in
@@ -77,6 +77,8 @@ make
 %install
 [ "$RPM_BUILD_ROOT" != "/" ] && rm -rf $RPM_BUILD_ROOT
 make install DESTDIR=$RPM_BUILD_ROOT
+# Don't package the Ndiff uninstaller with the RPM.
+rm -f $RPM_BUILD_ROOT%{_bindir}/uninstall_ndiff
 strip $RPM_BUILD_ROOT%{_bindir}/* || :
 gzip $RPM_BUILD_ROOT%{_mandir}/man1/* || :
 
