Use our https URL in more places instead of the non-SSL one
git-svn-id: https://svn.nmap.org/nmap@34685 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/Makefile.in
+++ b/Makefile.in
@@ -2,7 +2,7 @@
 export NMAP_VERSION := $(shell grep '^\#[ \t]*define[ \t]\+NMAP_VERSION' nmap.h | sed -e 's/.*"\(.*\)".*/\1/' -e 'q')
 export NMAP_UPDATE_CHANNEL := $(shell grep '^\#[ \t]*define[ \t]\+NMAP_UPDATE_CHANNEL' nmap.h | sed -e 's/.*"\(.*\)".*/\1/' -e 'q')
 NMAP_NAME= Nmap
-NMAP_URL= http://nmap.org
+NMAP_URL= https://nmap.org
 NMAP_PLATFORM=@host@
 datarootdir = @datarootdir@
 prefix = @prefix@
