--- a/Makefile.in
+++ b/Makefile.in
@@ -470,6 +470,6 @@ smtp-check-vulns SNMPcommunitybrute SNMPsysdescr SQLInject SSH-hostkey \
 SSHv1-support SSLv2-support strangeSMTPport UPnP-info xamppDefaultPass \
 zoneTrans db2-info db2-brute html-title robots.txt xmpp sql-injection \
 http-robtex-reverse-ip http-vuln-zimbra-lfi http-vuln-0-day-lfi-zimbra \
-whois db2-discover )
+whois db2-discover http-crossdomainxml )
 
 .PHONY: all clean install uninstall check static debug prerelease release-tarballs release-rpms web my_clean distclean lua-format
