Add a check for MACPORTS_PREFIX in dylib paths to macosx/Makefile
git-svn-id: https://svn.nmap.org/nmap@34859 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/macosx/Makefile
+++ b/macosx/Makefile
@@ -71,10 +71,13 @@ $(IMAGE_NAME): $(IMAGE_STAGING_DIR)/$(PKG_NAME)
 	rm -f $@
 	hdiutil create -imagekey zlib-level=9 -srcfolder $(IMAGE_STAGING_DIR) $@
 
-$(IMAGE_STAGING_DIR)/$(PKG_NAME): stage-nmap stage-ncat stage-ndiff stage-zenmap stage-nping stage-nmap-update COPYING.formatted
+$(IMAGE_STAGING_DIR)/$(PKG_NAME): check-nmap check-ncat check-ndiff check-zenmap check-nping check-nmap-update COPYING.formatted
 	mkdir -p $(IMAGE_STAGING_DIR)
 	cp -rf $(EXTRA_DIST) $(IMAGE_STAGING_DIR)/
 	$(PACKAGEMAKER) --doc nmap.pmdoc --title "Nmap $(NMAP_VERSION)" --no-relocate -o $@
+
+check-%: stage-%
+	find $* -perm -a+x -type f | xargs otool -L | grep "$(MACPORTS_PREFIX)" && false || echo "Libs are clean"
 
 export-%:
 	rm -rf $*
